<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical"
    tools:context=".SplashActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/logo" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/slogan1"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:fontFamily="serif"
        android:textColor="@color/blue"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/slogan2"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:fontFamily="serif"
        android:textColor="@color/blue"
        android:layout_marginTop="50dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Welcome"
        android:textColor="@color/red"
        android:textSize="25sp"
        android:textStyle="bold"
        android:fontFamily="serif"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        />

</RelativeLayout>