<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".UserActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/rect"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/type"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="20dp"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="32dp"
            android:layout_margin="10dp"
            android:layout_height="32dp"
            android:background="@drawable/circle"
            android:backgroundTint="@color/btn">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_centerInParent="true"
                android:text="1"
                android:textColor="@color/white" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="32dp"
            android:layout_margin="10dp"
            android:layout_height="32dp"
            android:background="@drawable/circle"
            android:backgroundTint="@color/btn">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="2"
                android:textColor="@color/white" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="10dp"
            android:background="@drawable/circle"
            android:backgroundTint="@color/red">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3"
                android:textColor="@color/white"
                android:layout_centerInParent="true"
                />

        </RelativeLayout>

    </LinearLayout>
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:background="@color/btn"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/circular"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/EnteryrNm"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:gravity="center"
        android:padding="10dp"
        />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:gravity="center"
        android:fontFamily="serif"
        android:elevation="5dp"
        android:background="@drawable/background"
        android:padding="10dp"
        android:textStyle="bold"
        android:inputType="text"
        android:hint="@string/Nm"/>

    <Button
        android:id="@+id/login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/ln"
        android:textStyle="bold"
        android:textColor="@color/red"
        android:background="@drawable/button"
        android:fontFamily="serif"
        android:layout_marginTop="50dp"
        android:elevation="5dp"
        android:padding="10dp"
        />

</LinearLayout>