<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    android:background="@color/bg"
    tools:context=".OtpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/rect"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/type"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="20dp"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="32dp"
            android:layout_margin="10dp"
            android:layout_height="32dp"
            android:background="@drawable/circle"
            android:backgroundTint="@color/btn">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_centerInParent="true"
                android:text="1"
                android:textColor="@color/white" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="32dp"
            android:layout_margin="10dp"
            android:layout_height="32dp"
            android:background="@drawable/circle"
            android:backgroundTint="@color/red">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="2"
                android:textColor="@color/white" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="10dp"
            android:background="@drawable/circle"
            android:backgroundTint="@color/btn">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3"
                android:textColor="@color/white"
                android:layout_centerInParent="true"
                />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:src="@drawable/otp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Enterotpnum"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:fontFamily="serif"
            android:padding="10dp"
            android:gravity="center"/>

        <EditText
            android:id="@+id/otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background"
            android:elevation="5dp"
            android:fontFamily="serif"
            android:gravity="center"
            android:inputType="number"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:hint="@string/enter_otp_number"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/nxt_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:elevation="5dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/prd"
        android:textColor="@color/red"
        android:textStyle="bold" />


</LinearLayout>